# SDE

./: .env.dev  .env.example  .env.local  .gitIgnore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/fastapi_backend/: config.py  main.py  middleware.py
src/fastapi_backend/routes/: health.py
tests/: test_health.py
