[tool.poetry]
name = "ekoi_api"
version = "0.1.0"
description = ""
authors = ["Manasa <manuvenke06@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.14"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = {extras = ["dotenv"], version = "^2.11.7"}
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
black = "^25.1.0"
ruff = "^0.12.1"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
